fix extension updates through backend
